# xenor-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  tick_throughput_benchmark.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake
docs/: architecture.md  determinism.md  rust_architecture.md
examples/: CMakeLists.txt  resource_pipeline_example.cpp
include/xenor/: deterministic_rng.hpp  input_sequence.hpp  replay_trace.hpp  simulation_clock.hpp  simulation_config.hpp  simulation_engine.hpp  simulation_snapshot.hpp  simulation_state.hpp  snapshot_boundary.hpp  step_context.hpp  system_phase.hpp  xenor.hpp
rust/: Cargo.toml
rust/examples/: settlement_site_demo.rs
rust/src/: lib.rs
rust/src/api/: mod.rs  settlement.rs
rust/src/bindings/: mod.rs
rust/src/canonical/: mod.rs
rust/src/config/: mod.rs
rust/src/core/: mod.rs
rust/src/deterministic/: mod.rs
rust/src/engine/: mod.rs
rust/src/fixture/: mod.rs
rust/src/input/: mod.rs
rust/src/parity/: mod.rs
rust/src/persistence/: mod.rs
rust/src/phases/: mod.rs
rust/src/replay/: mod.rs
rust/src/rng/: mod.rs
rust/src/scenario/: mod.rs
rust/src/scheduler/: mod.rs
rust/src/serialization/: mod.rs
rust/src/settlement/: mod.rs
rust/src/state/: mod.rs
rust/src/validation/: mod.rs
src/: simulation_clock.cpp  simulation_config.cpp
tests/: CMakeLists.txt  simulation_engine_tests.cpp
